--- a/quicklog/Cargo.toml
+++ b/quicklog/Cargo.toml
@@ -25,8 +25,8 @@ release_max_level_trace = []
 [dependencies]
 lazy_format = "2.0.0"
 regex = "1.7.1"
-quicklog-clock = { path = "../quicklog-clock", version = "0.1.0" }
-quicklog-flush = { path = "../quicklog-flush", version = "0.1.0" }
+quicklog-clock = { path = "../quicklog-clock", version = "0.1.0", registry = "ghp-cargo-local" }
+quicklog-flush = { path = "../quicklog-flush", version = "0.1.0", registry = "ghp-cargo-local" }
 quanta = "0.10.1"
 once_cell = "1.17.1"
 cfg-if = "1.0.0"
