--- a/quicklog/Cargo.toml
+++ b/quicklog/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "quicklog"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 
 [lib]
@@ -25,11 +25,12 @@ release_max_level_trace = []
 [dependencies]
 lazy_format = "2.0.0"
 regex = "1.7.1"
-quicklog-clock = { path = "../quicklog-clock", version = "0.1.0", registry = "ghp-cargo-local" }
+quicklog-clock = { path = "../quicklog-clock", version = "0.1.1", registry = "ghp-cargo-local" }
 quicklog-flush = { path = "../quicklog-flush", version = "0.1.0", registry = "ghp-cargo-local" }
 quanta = "0.10.1"
 once_cell = "1.17.1"
 cfg-if = "1.0.0"
+paste = "1.0.9"
 
 [dev-dependencies]
 criterion = "0.4.0"
