--- a/quicklog/Cargo.toml
+++ b/quicklog/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "quicklog"
-version = "0.1.10"
+version = "0.1.11"
 edition = "2021"
 
 [lib]
@@ -31,6 +31,7 @@ quanta = "0.10.1"
 once_cell = "1.17.1"
 cfg-if = "1.0.0"
 paste = "1.0.9"
+heapless = "0.7.16"
 
 [dev-dependencies]
 criterion = "0.4.0"
