--- a/quicklog/Cargo.toml
+++ b/quicklog/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "quicklog"
-version = "0.1.13"
+version = "0.1.14"
 edition = "2021"
 
 [lib]
@@ -25,8 +25,8 @@ release_max_level_trace = []
 [dependencies]
 lazy_format = "2.0.0"
 regex = "1.7.1"
-quicklog-clock = { path = "../quicklog-clock", version = "0.1.1", registry = "ghp-cargo-local" }
-quicklog-flush = { path = "../quicklog-flush", version = "0.1.1", registry = "ghp-cargo-local" }
+quicklog-clock = { path = "../quicklog-clock", version = "0.1.1"}
+quicklog-flush = { path = "../quicklog-flush", version = "0.1.2"}
 quanta = "0.10.1"
 once_cell = "1.17.1"
 cfg-if = "1.0.0"
@@ -42,6 +42,10 @@ tracing-subscriber = "0.3.16"
 
 [[bench]]
 name = "logger_benchmark"
+harness = false
+
+[[bench]]
+name = "quicklog_benchmark"
 harness = false
 
 [badges]
