--- a/quicklog/Cargo.toml
+++ b/quicklog/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "quicklog"
-version = "0.1.14"
+version = "0.1.15"
 edition = "2021"
 
 [lib]
@@ -25,8 +25,8 @@ release_max_level_trace = []
 [dependencies]
 lazy_format = "2.0.0"
 regex = "1.7.1"
-quicklog-clock = { path = "../quicklog-clock", version = "0.1.1"}
-quicklog-flush = { path = "../quicklog-flush", version = "0.1.2"}
+quicklog-clock = { path = "../quicklog-clock", version = "0.1.1", registry = "ghp-cargo-local" }
+quicklog-flush = { path = "../quicklog-flush", version = "0.1.2", registry = "ghp-cargo-local" }
 quanta = "0.10.1"
 once_cell = "1.17.1"
 cfg-if = "1.0.0"
