--- a/quicklog-flush/Cargo.toml
+++ b/quicklog-flush/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "quicklog-flush"
-descrption = "contains Flusher for quicklog logger"
+description = "contains Flusher for quicklog logger"
 documentation = "https://docs.rs/quicklog-flush"
 repository = "https://github.com/ghpr-asia/quicklog"
 version = "0.1.2"
