--- a/quicklog/Cargo.toml
+++ b/quicklog/Cargo.toml
@@ -2,6 +2,12 @@
 name = "quicklog"
 version = "0.1.15"
 edition = "2021"
+description = "contains Clock for quicklog logger"
+documentation = "https://docs.rs/quicklog-flush"
+repository = "https://github.com/ghpr-asia/quicklog"
+license = "Apache-2.0"
+keywords = ["quicklog", "logger"]
+workspace = "../"
 
 [lib]
 name = "quicklog"
