--- a/quicklog/Cargo.toml
+++ b/quicklog/Cargo.toml
@@ -3,7 +3,7 @@ name = "quicklog"
 version = "0.1.15"
 edition = "2021"
 description = "contains Clock for quicklog logger"
-documentation = "https://docs.rs/quicklog-flush"
+documentation = "https://docs.rs"
 repository = "https://github.com/ghpr-asia/quicklog"
 license = "Apache-2.0"
 keywords = ["quicklog", "logger"]
