--- a/quicklog-clock/Cargo.toml
+++ b/quicklog-clock/Cargo.toml
@@ -3,11 +3,12 @@ name = "quicklog-clock"
 description = "contains Clock for quicklog logger"
 documentation = "https://docs.rs/quicklog-clock"
 repository = "https://github.com/ghpr-asia/quicklog"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 license = "Apache-2.0"
 keywords = ["quicklog", "logger"]
 workspace = "../"
+readme = "../README.md"
 
 [dependencies]
 chrono = "0.4.24"
