--- a/quicklog/Cargo.toml
+++ b/quicklog/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "quicklog"
-version = "0.1.16"
+version = "0.1.17"
 edition = "2021"
 description = "contains Clock for quicklog logger"
 documentation = "https://docs.rs/quicklog"
@@ -8,6 +8,8 @@ repository = "https://github.com/ghpr-asia/quicklog"
 license = "Apache-2.0"
 keywords = ["quicklog", "logger"]
 workspace = "../"
+readme = "../README.md"
+build = "build.rs"
 
 [lib]
 name = "quicklog"
