--- a/quicklog-clock/Cargo.toml
+++ b/quicklog-clock/Cargo.toml
@@ -1,8 +1,19 @@
 [package]
 name = "quicklog-clock"
-version = "0.1.1"
+
+description = "contains Clock for quicklog logger"
+documentation = "https://docs.rs/quicklog-clock"
+repository = "https://github.com/ghpr-asia/quicklog"
+version = "0.1.3"
 edition = "2021"
+license = "Apache-2.0"
+keywords = ["quicklog", "logger"]
+workspace = "../"
+readme = "../README.md"
 
 [dependencies]
 chrono = "0.4.24"
 quanta = "0.10.1"
+
+[badges]
+maintenance = { status = "actively-developed" }
