--- a/quicklog/Cargo.toml
+++ b/quicklog/Cargo.toml
@@ -1,7 +1,15 @@
 [package]
 name = "quicklog"
-version = "0.1.15"
+version = "0.1.18"
 edition = "2021"
+description = "fast logging in Rust"
+documentation = "https://docs.rs/quicklog"
+repository = "https://github.com/ghpr-asia/quicklog"
+license = "Apache-2.0"
+keywords = ["quicklog", "logger"]
+workspace = "../"
+readme = "../README.md"
+build = "build.rs"
 
 [lib]
 name = "quicklog"
@@ -24,8 +32,8 @@ release_max_level_trace = []
 
 [dependencies]
 lazy_format = "2.0.0"
-quicklog-clock = { path = "../quicklog-clock", version = "0.1.1" }
-quicklog-flush = { path = "../quicklog-flush", version = "0.1.2" }
+quicklog-clock = { path = "../quicklog-clock", version = "0.1.3" }
+quicklog-flush = { path = "../quicklog-flush", version = "0.1.3" }
 quanta = "0.10.1"
 once_cell = "1.17.1"
 cfg-if = "1.0.0"
