--- a/quicklog/Cargo.toml
+++ b/quicklog/Cargo.toml
@@ -17,6 +17,7 @@ once_cell = "1.18.0"
 cfg-if = "1.0.0"
 paste = "1.0.9"
 heapless = "0.7.16"
+chrono = "0.4.24"
 
 [dev-dependencies]
 criterion = "0.4.0"
