--- a/quicklog-clock/Cargo.toml
+++ b/quicklog-clock/Cargo.toml
@@ -12,8 +12,8 @@ workspace = "../"
 readme = "../README.md"
 
 [dependencies]
-chrono = "0.4.24"
-quanta = "0.10.1"
+chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
+quanta = "0.11.1"
 
 [badges]
 maintenance = { status = "actively-developed" }
