--- a/quicklog/Cargo.toml
+++ b/quicklog/Cargo.toml
@@ -12,12 +12,12 @@ lazy_format = "2.0.0"
 regex = "1.7.1"
 quicklog-clock = { path = "../quicklog-clock", version = "0.1.1", registry = "ghp-cargo-local" }
 quicklog-flush = { path = "../quicklog-flush", version = "0.1.2", registry = "ghp-cargo-local" }
-quanta = "0.10.1"
+quanta = "0.11.1"
 once_cell = "1.18.0"
 cfg-if = "1.0.0"
 paste = "1.0.9"
 heapless = "0.7.16"
-chrono = "0.4.24"
+chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
 
 [dev-dependencies]
 criterion = "0.4.0"
