--- a/quicklog/Cargo.toml
+++ b/quicklog/Cargo.toml
@@ -25,10 +25,10 @@ path = "tests/ui.rs"
 lazy_format = "2.0.0"
 quicklog-clock = { path = "../quicklog-clock", version = "0.1.3" }
 quicklog-flush = { path = "../quicklog-flush", version = "0.1.3" }
+quicklog-macros = { path = "../quicklog-macros", version = "0.1.0" }
 quanta = "0.11.1"
 once_cell = "1.18.0"
 cfg-if = "1.0.0"
-paste = "1.0.9"
 heapless = "0.7.16"
 chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
 
