--- a/quicklog/Cargo.toml
+++ b/quicklog/Cargo.toml
@@ -1,11 +1,17 @@
 [package]
 name = "quicklog"
 version = "0.1.22"
+# passing all test cases through trybuild
+autotests = false
 edition = "2021"
 
 [lib]
 name = "quicklog"
 path = "src/lib.rs"
+
+[[test]]
+name = "tests"
+path = "tests/ui.rs"
 
 [dependencies]
 lazy_format = "2.0.0"
@@ -26,6 +32,7 @@ tracing = "0.1.37"
 tracing-appender = "0.2.2"
 tracing-subscriber = "0.3.16"
 recycle-box = { version = "0.2.0"}
+trybuild = "1.0.85"
 
 [[bench]]
 name = "logger_benchmark"
