--- a/quicklog/Cargo.toml
+++ b/quicklog/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "quicklog"
-version = "0.2.0"
+version = "0.2.1"
 # passing all test cases through trybuild
 autotests = false
 edition = "2021"
@@ -17,7 +17,7 @@ path = "tests/ui.rs"
 lazy_format = "2.0.0"
 quicklog-clock = { path = "../quicklog-clock", version = "0.1.2", registry = "ghp-cargo-local" }
 quicklog-flush = { path = "../quicklog-flush", version = "0.1.2", registry = "ghp-cargo-local" }
-quicklog-macros = { path = "../quicklog-macros", version = "0.1.0" }
+quicklog-macros = { path = "../quicklog-macros", version = "0.1.0", registry = "ghp-cargo-local" }
 quanta = "0.11.1"
 once_cell = "1.18.0"
 heapless = "0.7.16"
