--- a/quicklog/Cargo.toml
+++ b/quicklog/Cargo.toml
@@ -24,8 +24,9 @@ quicklog-flush = { path = "../quicklog-flush", version = "0.1.2", registry = "gh
 quicklog-macros = { path = "../quicklog-macros", version = "0.1.0", registry = "ghp-cargo-local" }
 quanta = "0.11.1"
 once_cell = "1.18.0"
-heapless = "0.7.16"
 chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
+rtrb = "0.2.3"
+dyn-fmt = "0.4.0"
 
 [dev-dependencies]
 criterion = "0.4.0"
