--- a/quicklog/Cargo.toml
+++ b/quicklog/Cargo.toml
@@ -45,5 +45,9 @@ harness = false
 name = "quicklog_benchmark"
 harness = false
 
+[[bench]]
+name = "serialize_benchmark"
+harness = false
+
 [badges]
 maintenance = { status = "actively-developed" }
