--- a/quicklog/Cargo.toml
+++ b/quicklog/Cargo.toml
@@ -18,19 +18,20 @@ name = "derive"
 path = "tests/derive/derive.rs"
 
 [dependencies]
-lazy_format = "2.0.0"
 quicklog-clock = { path = "../quicklog-clock", version = "0.1.2", registry = "ghp-cargo-local" }
 quicklog-flush = { path = "../quicklog-flush", version = "0.1.2", registry = "ghp-cargo-local" }
 quicklog-macros = { path = "../quicklog-macros", version = "0.1.0", registry = "ghp-cargo-local" }
 quanta = "0.11.1"
 once_cell = "1.18.0"
 chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
-rtrb = "0.2.3"
 dyn-fmt = "0.4.0"
+bumpalo = { version = "3.14.0", features = ["collections"] }
+crossbeam-utils = { version = "0.8.16", default-features = false }
 
 [dev-dependencies]
 criterion = "0.4.0"
 delog = "0.1.6"
+lazy_format = "2.0.0"
 tracing = "0.1.37"
 tracing-appender = "0.2.2"
 tracing-subscriber = "0.3.16"
