--- a/quicklog/Cargo.toml
+++ b/quicklog/Cargo.toml
@@ -20,12 +20,12 @@ path = "tests/derive/derive.rs"
 [dependencies]
 quicklog-flush = { path = "../quicklog-flush", version = "0.1.2", registry = "ghp-cargo-local" }
 quicklog-macros = { path = "../quicklog-macros", version = "0.1.1", registry = "ghp-cargo-local" }
-quanta = "0.11.1"
 once_cell = "1.18.0"
 chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
 dyn-fmt = "0.4.0"
 bumpalo = { version = "3.14.0", features = ["collections"] }
 crossbeam-utils = { version = "0.8.16", default-features = false }
+minstant = "0.1.4"
 
 [dev-dependencies]
 criterion = "0.4.0"
