quicklog(macros): avoid variable name conflict

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,7 @@ variables:
   GHP_CI_IMAGE: us-central1-docker.pkg.dev/ghpr-mgmt/dkr/ghp-base-rust:2.0.0
   GHP_IMAGE_LOCATION: us-central1
   GHP_RUST_VERSION: "1.72.0"
+  GHP_TARPAULIN_FLAGS: --timeout 120
 
 stages:
   - prep
