--- a/quicklog/Cargo.toml
+++ b/quicklog/Cargo.toml
@@ -15,6 +15,7 @@ dyn-fmt = "0.4.0"
 bumpalo = { version = "3.14.0", features = ["collections"] }
 crossbeam-utils = { version = "0.8.16", default-features = false }
 minstant = "0.1.4"
+nu-ansi-term = { version = "0.49.0", optional = true }
 
 [dev-dependencies]
 trybuild = "1.0.85"
@@ -23,4 +24,5 @@ trybuild = "1.0.85"
 maintenance = { status = "actively-developed" }
 
 [features]
+ansi = ["dep:nu-ansi-term"]
 bench = []
