--- a/quicklog/Cargo.toml
+++ b/quicklog/Cargo.toml
@@ -12,7 +12,7 @@ quicklog-flush = { path = "../quicklog-flush", version = "0.1.3", registry = "gh
 quicklog-macros = { path = "../quicklog-macros", version = "0.1.21", registry = "ghp-cargo-local" }
 chrono = { version = "0.4.32", default-features = false, features = ["clock"] }
 dyn-fmt = "0.4.0"
-bumpalo = { version = "3.14.0", features = ["collections"] }
+bumpalo = { version = "=3.14.0", features = ["collections"] }
 crossbeam-utils = { version = "0.8.16", default-features = false }
 minstant = "0.1.4"
 nu-ansi-term = { version = "0.49.0", optional = true }
