--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,12 +2,13 @@ name: Rust
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "**" ]
   pull_request:
     branches: [ "main" ]
 
 env:
   CARGO_TERM_COLOR: always
+  RUST_VERSION: "1.72"
 
 jobs:
   build:
@@ -16,6 +17,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Install toolchain
+      run: rustup toolchain install --profile minimal --no-self-update $RUST_VERSION
+    - name: Set default toolchain
+      run: rustup default $RUST_VERSION
     - name: Build
       run: cargo build --verbose
     - name: Run tests
